--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
+html {
+  background: linear-gradient(#101010, #000000);
+}
+
 * {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
