feat: new global styles and linear gradient navbar

--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -1,6 +1,7 @@
 .navbar__main {
   display: flex;
   justify-content: center;
+  background-image: linear-gradient(black, transparent);
 
   ul {
     display: flex;
