--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-html {
-  background: linear-gradient(#101010, #000000);
+body {
+  min-height: 100vh;
+  margin: 0;
+  background: url(https://static-assets.bamgrid.com/product/disneyplus/images/background.dc67869b698f6c927aae59c68d9dda46.png)
+    center center / cover no-repeat fixed;
 }
 
 * {
