--- a/src/global.scss
+++ b/src/global.scss
@@ -3,11 +3,11 @@
 body {
   min-height: 100vh;
   margin: 0;
+  font-family: Avenir-Roman, sans-serif;
   background: url(https://static-assets.bamgrid.com/product/disneyplus/images/background.dc67869b698f6c927aae59c68d9dda46.png)
     center center / cover no-repeat fixed;
 }
 
 * {
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
 }
