--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -1,7 +1,14 @@
 .navbar__main {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   background-image: linear-gradient(black, transparent);
+
+  &__logo {
+    padding: 8px 16px 8px;
+    img {
+      width: 70px;
+    }
+  }
 
   ul {
     display: flex;
